# multi-cli-studio

./: .gitignore  README.md  README.zh-CN.md  Response.txt  automationexample.html  package-lock.json  package.json  shareContext_Phase.md  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release-desktop.yml
scripts/: materialize-tauri-signing-key.mjs  release-preflight.mjs  setup-desktop-release.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.conf.json.sig
src-tauri/capabilities/: default.json
src-tauri/src/: acp.rs  automation.rs  local_usage.rs  main.rs  session_management.rs  storage.rs
src/components/: ConversationHistory.tsx  DesktopWindowChrome.tsx  HandoffTimeline.tsx  Sidebar.tsx
src/layouts/: AppLayout.tsx
src/lib/: acp.ts  agentIcons.ts  apiChatFormatting.ts  bridge.ts  browserRuntime.ts  chatAttachments.ts  compaction.ts  customPrompts.ts  desktopNotifications.ts  models.ts  store.ts  tokenEstimation.ts  vendorModels.ts  workspaceFileIndex.ts
src/pages/: AutomationComposerPage.tsx  AutomationJobEditorPage.tsx  AutomationJobsPage.tsx  AutomationPage.tsx  AutomationRunDetailSections.tsx  AutomationWorkflowEditorPage.tsx  AutomationWorkflowsPage.tsx  DashboardPage.tsx  DesktopSessionManagementPage.tsx  DesktopSettingsPage.tsx  HandoffPage.tsx  ModelChatPage.tsx  ModelProviderEditorPage.tsx  ModelProvidersPage.tsx  SettingsPage.tsx  TerminalPage.tsx  automationUi.ts
src/styles/: globals.css  settings-desktop.css  terminal-chat-prompt.css  (+1 more)
(+36 files in other folders)
