[package]
name = "multi-cli-studio"
version = "0.1.0"
description = "Desktop orchestration shell for Codex, Claude, and Gemini CLIs."
authors = ["OpenAI Codex"]
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["v4", "serde"] }
